<?xml version="1.0"?>
<package format="3">
  <name>height_astar_planner</name>
  <version>0.0.1</version>
  <description>
    A* path planner for elevation grid maps using ROS 2 grid_map.
    The package includes two custom height map publishers and an A* planner
    with slope-aware transition cost and RViz visualization.
  </description>

  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>